tree-sitter-php-only/test/corpus/execution_operator.txt
================================================================================
Quotes in backticks
================================================================================

<?php
`"'`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (shell_command_expression
      (string_value))))

================================================================================
Escape sequences in backticks
================================================================================

<?php
`echo hello\nworld`;
`\x6c\x73`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (shell_command_expression
      (string_value)
      (escape_sequence)
      (string_value)))
  (expression_statement
    (shell_command_expression
      (escape_sequence)
      (escape_sequence))))

================================================================================
Variable interpolation in backticks
================================================================================

<?php
$cmd = 'ls';
`$cmd`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (assignment_expression
      (variable_name
        (name))
      (string
        (string_value))))
  (expression_statement
    (shell_command_expression
      (variable_name
        (name)))))

================================================================================
Member access expression in backticks
================================================================================

<?php
$obj = new stdClass();
$obj->cmd = 'ls';
`$obj->cmd`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (assignment_expression
      (variable_name
        (name))
      (object_creation_expression
        (name)
        (arguments))))
  (expression_statement
    (assignment_expression
      (member_access_expression
        (variable_name
          (name))
        (name))
      (string
        (string_value))))
  (expression_statement
    (shell_command_expression
      (member_access_expression
        (variable_name
          (name))
        (name)))))

================================================================================
Array subscript expression in backticks
================================================================================

<?php
$cmd = array('ls');
`$cmd[0]`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (assignment_expression
      (variable_name
        (name))
      (array_creation_expression
        (array_element_initializer
          (string
            (string_value))))))
  (expression_statement
    (shell_command_expression
      (subscript_expression
        (variable_name
          (name))
        (integer)))))

================================================================================
Complex interpolation in backticks
================================================================================

<?php
$cmd = 'ls';
`{$cmd}`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (assignment_expression
      (variable_name
        (name))
      (string
        (string_value))))
  (expression_statement
    (shell_command_expression
      (variable_name
        (name)))))

================================================================================
Nesting of expression in backticks
================================================================================

<?php
`echo {` && `echo }`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (binary_expression
      (shell_command_expression
        (string_value))
      (shell_command_expression
        (string_value)))))

================================================================================
Nested escaped backticks
================================================================================

<?php
`\`echo ls\``;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (shell_command_expression
      (escape_sequence)
      (string_value)
      (escape_sequence))))

================================================================================
Comment in backticks
================================================================================

<?php
`echo /* hello */`;

--------------------------------------------------------------------------------

(php
  (php_tag)
  (expression_statement
    (shell_command_expression
      (string_value))))
